
  * Removed the default source type for love.audio.newSource.
  * Removed variant of love.filesystem.newFileData which takes base64 data, use love.math.decode instead.

LOVE 0.10.2 [Super Toast]
-------------------------

Released: N/A

  * Added lovec.exe in Windows. It is the same as love.exe but built with the Console subsystem, so it always uses or provides a console.

  * Fixed os.execute always returning -1 on Linux.
  * Fixed the video decoding thread to not do any work when there are no videos to decode.
  * Fixed stencils inside Canvases on some OpenGL ES 2 devices.
  * Fixed love.window.setMode crashing when called with a Canvas active.
  * Fixed gamma correction of ImageFonts and BMFonts with colored images.
  * Fixed the default shader improperly applying gamma correction to per-vertex colors when gamma correction is requested but not supported on OpenGL ES.

  * Improved performance of Channel methods by roughly 2x in many cases.


LOVE 0.10.1 [Super Toast]
-------------------------

Released: 2016-02-14

  * Added a new love.conf flag t.externalstorage, which determines whether files are saved in internal or external storage on Android devices.
  * Added a new variant of love.graphics.arc which can draw different types of arcs ("pie", "open", or "closed").
  * Added "lighten" and "darken" BlendModes. They can only be used with the "premultiplied" BlendAlphaMode.
  * Added the "lighten" GraphicsFeature constant.
  * Added the ability to avoid clearing specific Canvases when calling love.graphics.clear, if multiple Canvases are active at once via love.graphics.setCanvas.
  * Added Text:getDimensions.
  * Added optional "collideconnected" argument to love.physics.newMotorJoint.

  * Fixed a Lua error in the no-game screen if the window's height is too small.
  * Fixed the default error handler to reset the mouse Cursor.
  * Fixed love.filesystem functions crashing when called if liblove is used directly without calling love.filesystem.init.