@@ -24,12 +24,21 @@
 // Platform stuff.
 #if defined(WIN32) || defined(_WIN32)
 #	define LOVE_WINDOWS 1
+	// If _USING_V110_SDK71_ is defined it means we are using the xp toolset.
+#	if defined(_MSC_VER) && (_MSC_VER >= 1700) && !_USING_V110_SDK71_
+#	include <winapifamily.h>
+#		if WINAPI_FAMILY_PARTITION(WINAPI_PARTITION_APP) && !WINAPI_FAMILY_PARTITION(WINAPI_PARTITION_DESKTOP)
+#			define LOVE_WINDOWS_UWP 1
+#			define LOVE_NO_MODPLUG 1
+#			define LOVE_NOMPG123 1
+#		endif
+#	endif
 #endif
 #if defined(linux) || defined(__linux) || defined(__linux__)
-# define LOVE_LINUX 1
+#	define LOVE_LINUX 1
 #endif
 #if defined(__ANDROID__)
-#  define LOVE_ANDROID 1
+#	define LOVE_ANDROID 1
 #endif
 #if defined(__APPLE__)
 #	include <TargetConditionals.h>
@@ -76,7 +85,9 @@
 #endif
 
 #if defined(LOVE_WINDOWS)
+#ifndef LOVE_WINDOWS_UWP
 #	define LOVE_LEGENDARY_CONSOLE_IO_HACK
+#endif // LOVE_WINDOWS_UWP
 #	define NOMINMAX
 #endif
 
