@@ -22,15 +22,23 @@ LOVE 0.10.2 [Super Toast]
 Released: N/A
 
   * Added lovec.exe in Windows. It is the same as love.exe but built with the Console subsystem, so it always uses or provides a console.
+  * Added 'shaderswitches' field to the table returned by love.graphics.getStats.
+  * Added Quad:getTextureDimensions.
 
+  * Fixed love on iOS 6.
   * Fixed os.execute always returning -1 on Linux.
+  * Fixed a hang at the end of video playback with some video files.
   * Fixed the video decoding thread to not do any work when there are no videos to decode.
+  * Fixed a rare bug in Source:play for streaming Sources if the associated OpenAL source object was previously used for a static Source.
+  * Fixed corrupted Font glyphs in rare cases.
   * Fixed stencils inside Canvases on some OpenGL ES 2 devices.
   * Fixed love.window.setMode crashing when called with a Canvas active.
   * Fixed gamma correction of ImageFonts and BMFonts with colored images.
   * Fixed the default shader improperly applying gamma correction to per-vertex colors when gamma correction is requested but not supported on OpenGL ES.
 
   * Improved performance of Channel methods by roughly 2x in many cases.
+  
+  * Updated love.filesystem.mount to accept a DroppedFile as the first parameter.
 
 
 LOVE 0.10.1 [Super Toast]
